Hide Download button

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       Tu cuenta ha sido confirmada exitosamente.<br>
       Ya podés usar la app normalmente.
     </div>
-    <a class="btn" href="#" tabindex="0">Descargar la app</a>
+    <!--a class="btn" href="#" tabindex="0">Descargar la app</a-->
     <div id="open-app" style="display:none; margin-top:18px;">
       <a class="btn" href="papelito://" style="background:#22c55e;">Abrir en la app</a>
     </div>
